--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,15 @@
         <module>quarkus-3.15</module> <!-- 3.15 has LTS (https://quarkus.io/blog/quarkus-3-15-1-released/) -->
         <module>quarkus-3.16</module>
         <module>quarkus-3.17</module>
+        <module>quarkus-3.18</module>
+        <module>quarkus-3.19</module>
+        <module>quarkus-3.20</module> <!-- 3.20 has LTS (https://quarkus.io/blog/quarkus-3-20-0-released/) -->
+        <module>quarkus-3.21</module>
         <module>wildfly-32</module>
         <module>wildfly-33</module>
         <module>wildfly-34</module>
         <module>wildfly-35</module>
+        <module>wildfly-36</module>
         <module>update-checker</module>
     </modules>
 
@@ -72,32 +77,32 @@
         <!-- for plugins see also the section in README.md -->
 
         <!-- non-apache maven plugin versions -->
-        <asciidoctor.plugin.version>3.1.1</asciidoctor.plugin.version>
+        <asciidoctor.plugin.version>3.2.0</asciidoctor.plugin.version>
         <build-helper.plugin.version>3.6.0</build-helper.plugin.version>
-        <docker.plugin.version>0.45.1</docker.plugin.version>
-        <extra-enforcer-rules.plugin.version>1.9.0</extra-enforcer-rules.plugin.version>
-        <jacoco.plugin.version>0.8.12</jacoco.plugin.version>
+        <docker.plugin.version>0.46.0</docker.plugin.version>
+        <extra-enforcer-rules.plugin.version>1.10.0</extra-enforcer-rules.plugin.version>
+        <jacoco.plugin.version>0.8.13</jacoco.plugin.version>
         <!-- the jandex version is overwritten in the quarkus modules -->
-        <jandex.plugin.version>3.2.3</jandex.plugin.version>
+        <jandex.plugin.version>3.3.0</jandex.plugin.version>
         <nexus-staging.plugin.version>1.7.0</nexus-staging.plugin.version>
-        <openapi-generator.plugin.version>7.11.0</openapi-generator.plugin.version>
-        <!-- Don't use 3.0.57..3.0.64 because of https://github.com/swagger-api/swagger-codegen-generators/issues/1295 -->
+        <openapi-generator.plugin.version>7.13.0</openapi-generator.plugin.version>
+        <!-- Don't use 3.0.57..3.0.68 because of https://github.com/swagger-api/swagger-codegen-generators/issues/1295 -->
         <!-- (still not fixed for non-spring apps, see https://github.com/swagger-api/swagger-codegen-generators/pull/1308) -->
         <swagger-codegen.plugin.version>3.0.56</swagger-codegen.plugin.version>
         <versions.plugin.version>2.18.0</versions.plugin.version>
-        <wildfly.plugin.version>5.1.1.Final</wildfly.plugin.version>
+        <wildfly.plugin.version>5.1.3.Final</wildfly.plugin.version>
 
         <!-- apache maven plugin versions (in alphabetical order) -->
         <maven.assembly.plugin.version>3.7.1</maven.assembly.plugin.version>
-        <maven.clean.plugin.version>3.4.0</maven.clean.plugin.version>
-        <maven.compiler.plugin.version>3.13.0</maven.compiler.plugin.version>
+        <maven.clean.plugin.version>3.4.1</maven.clean.plugin.version>
+        <maven.compiler.plugin.version>3.14.0</maven.compiler.plugin.version>
         <maven.dependency.plugin.version>3.8.1</maven.dependency.plugin.version>
-        <maven.deploy.plugin.version>3.1.3</maven.deploy.plugin.version>
+        <maven.deploy.plugin.version>3.1.4</maven.deploy.plugin.version>
         <maven.ear.plugin.version>3.3.0</maven.ear.plugin.version>
         <maven.ejb.plugin.version>3.2.1</maven.ejb.plugin.version>
         <maven.enforcer.plugin.version>3.5.0</maven.enforcer.plugin.version>
-        <maven.failsafe.plugin.version>3.5.2</maven.failsafe.plugin.version>
-        <maven.install.plugin.version>3.1.3</maven.install.plugin.version>
+        <maven.failsafe.plugin.version>3.5.3</maven.failsafe.plugin.version>
+        <maven.install.plugin.version>3.1.4</maven.install.plugin.version>
         <maven.jar.plugin.version>3.4.2</maven.jar.plugin.version>
         <maven.javadoc.plugin.version>3.11.2</maven.javadoc.plugin.version>
         <maven.rar.plugin.version>3.0.0</maven.rar.plugin.version>
@@ -112,17 +117,17 @@
 
         <!-- artifact versions -->
         <apache.commons.lang3.version>3.17.0</apache.commons.lang3.version>
-        <logback.version>1.5.16</logback.version>
-        <lombok.version>1.18.36</lombok.version>
+        <logback.version>1.5.18</logback.version>
+        <lombok.version>1.18.38</lombok.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
         <mapstruct.version>1.6.3</mapstruct.version>
-        <io.opentelemetry.instrumentation.version>2.12.0</io.opentelemetry.instrumentation.version>
-        <slf4j.version>2.0.16</slf4j.version>
+        <io.opentelemetry.instrumentation.version>2.15.0</io.opentelemetry.instrumentation.version>
+        <slf4j.version>2.0.17</slf4j.version>
 
         <!-- latest Jackson version for projects independent of an application server (AS) -->
         <!-- most of the AS submodules redefine it with an older version -->
-        <jackson-2-version>2.18.2</jackson-2-version>
-        <jackson-bom.version>2.18.2</jackson-bom.version>
+        <jackson-2-version>2.19.0</jackson-2-version>
+        <jackson-bom.version>2.19.0</jackson-bom.version>
 
         <!-- latest version for projects independent of an application server (AS) -->
         <!-- with an AS it is redefined to be the version used by the AS's resteasy artifact -->
@@ -137,8 +142,8 @@
         <!-- byte code manipulation tools, mostly used for tests, but not exclusively -->
         <!-- note that byte-buddy pulls in asm, so asm.version should be the one used by the given byte-buddy -->
         <!-- (check `version.asm` in maven3_repo\net\bytebuddy\byte-buddy-parent\x.y.z\byte-buddy-parent-x.y.z.pom) -->
-        <asm.version>9.7.1</asm.version>
-        <byte-buddy.version>1.16.1</byte-buddy.version>
+        <asm.version>9.8</asm.version>
+        <byte-buddy.version>1.17.5</byte-buddy.version>
 
         <!-- use the latest Bouncy Castle version despite what Quarkus defines in its BOM -->
         <bouncycastle.version>1.80</bouncycastle.version>
@@ -148,15 +153,15 @@
 
         <!-- testing and static analysis -->
         <opentest4j.version>1.3.0</opentest4j.version>
-        <junit.platform.version>1.11.4</junit.platform.version>
-        <junit.jupiter.version>5.11.4</junit.jupiter.version>
+        <junit.platform.version>1.12.2</junit.platform.version>
+        <junit.jupiter.version>5.12.2</junit.jupiter.version>
         <hamcrest.version>3.0</hamcrest.version>
-        <mockito.version>5.15.2</mockito.version>
-        <equalsverifier.version>3.18.1</equalsverifier.version>
+        <mockito.version>5.17.0</mockito.version>
+        <equalsverifier.version>3.19.4</equalsverifier.version>
         <json.unit.version>4.1.0</json.unit.version>
         <jsonassert.version>1.5.3</jsonassert.version>
-        <restassured.version>5.5.0</restassured.version>
-        <wiremock.version>3.10.0</wiremock.version>
+        <restassured.version>5.5.1</restassured.version>
+        <wiremock.version>3.13.0</wiremock.version>
 
         <!-- Docker has a special DNS name 'host.docker.internal', but only starting with Docker 18.03... -->
         <!-- Simulating this variable depending on the OS (see also the profiles below overriding it) -->
@@ -723,6 +728,47 @@
                 <!-- to override the default from the <properties> section above -->
                 <docker-host-internal>${env.HOSTNAME}</docker-host-internal>
             </properties>
+        </profile>
+        <!-- default failsafe configuration, can be overridden/deactivated with "-DoverrideFailsafe" or "-P !failsafe-jacoco" -->
+        <profile>
+            <id>failsafe-jacoco</id>
+            <activation>
+                <property>
+                    <name>!overrideFailsafe</name>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <version>${maven.failsafe.plugin.version}</version>
+                        <executions>
+                            <!-- according to https://github.com/fabric8io/docker-maven-plugin/issues/915#issuecomment-691493030 -->
+                            <!-- docker:stop works more reliable in case of test failures when separating integration-test and verify -->
+                            <!-- compare to the jetty example at https://maven.apache.org/surefire/maven-failsafe-plugin/usage.html#using-jetty-and-maven-failsafe-plugin -->
+                            <execution>
+                                <id>root-pom-failsafe-integration-test</id>
+                                <goals>
+                                    <goal>integration-test</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>root-pom-failsafe-verify</id>
+                                <goals>
+                                    <goal>verify</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <argLine>${jacoco.integration.agent.arg}</argLine>
+                            <classpathDependencyExcludes>
+                                <classpathDependencyExcludes>javax:javaee-api</classpathDependencyExcludes>
+                            </classpathDependencyExcludes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
 
         <!-- profile to test that the referenced versions exist for typical dependencies -->
