--- a/quarkus-3.16/pom.xml
+++ b/quarkus-3.16/pom.xml
@@ -122,7 +122,7 @@
 
             <!-- Quarkus BOM -->
             <dependency>
-                <groupId>io.quarkus</groupId>
+                <groupId>io.quarkus.platform</groupId>
                 <artifactId>quarkus-bom</artifactId>
                 <version>${quarkus.version}</version>
                 <type>pom</type>
